[package]
name = "selecting_flow_example"
version = "0.1.0"
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
selecting_flow = { git = "https://github.com/White-Green/selecting_flow", rev = "cc30a092c2f175087d08008f4ec420d68142ffbe" }
crossbeam = "0.8.0"
rayon = "1.5.0"
clap = "2.33.3"
num_cpus = "1.13.0"
rand = "0.8.3"
num-traits = "0.2.14"

[profile.release]
lto = true
